Added loggers on top of catching exceptions for better logging of errors. improved checkstyle